# sampleicc

./: AUTHORS  COPYING  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.OSX  aclocal.m4  bootstrap  configure  configure.ac  iccExtractPrimaryRamps.cpp  ltmain.sh  sampleicc.pc.in
Contrib/: Makefile.in  README
Contrib/CmdLine/: Makefile.am  Makefile.in
Contrib/CmdLine/create_CLUT_profile/: Black_scaler.cpp  Black_scaler.h  Makefile.in  create_CLUT_profile.cpp  create_CLUT_profile.dsp  create_CLUT_profile.vcproj
Contrib/CmdLine/create_CLUT_profile_from_probe/: Makefile.in  create_CLUT_profile_from_probe.cpp  create_CLUT_profile_from_probe.vcproj
Contrib/CmdLine/create_display_profile/: Makefile.in  create_display_profile.cpp  create_display_profile.dsp  create_display_profile.vcproj
Contrib/ICC_utils/: CAT.cpp  CAT.h  CLUT.cpp  CLUT.h  CLUT_stuffer.cpp  CLUT_stuffer.h  ICC_tool_exception.cpp  ICC_tool_exception.h  ICC_utils.dsp  ICC_utils.vcproj  ICC_utils_v7.vcproj  Makefile.am  Makefile.in  Stubs.cpp  Stubs.h  Vetters.cpp  Vetters.h
Contrib/Mac_OS_X/: Makefile.am  Makefile.in
Contrib/Mac_OS_X/create_probe/: Makefile.am  Makefile.in  create_probe.cpp
Contrib/Mac_OS_X/extract_probe_data/: Makefile.am  Makefile.in  extract_probe_data.cpp
Contrib/Winnt/: BuildAllContrib.sln
Contrib/examples/: Makefile.in
Contrib/examples/RSR/: 02_make_input_profile_from_probe.sh  ConversionProject.aep  Makefile.am  Makefile.in  README  create_pretransform_curve.cpp  create_pretransform_curve.vcproj
Contrib/tests/: Makefile.am  Makefile.in
Contrib/tests/flatten_AToB_tag/: Makefile.in  flatten_AToB_tag.cpp  flatten_AToB_tag.vcproj
Contrib/tests/generate_device_codes/: Makefile.am  Makefile.in  generate_device_codes.cpp  generate_device_codes.vcproj
Contrib/tests/reconstruct_measurements/: Makefile  Makefile.in  Measurement_extractor.cpp  Measurement_extractor.h  reconstruct_measurements.cpp  reconstruct_measurements.vcproj
Contrib/tests/round_trip_PCS_LAB/: Makefile.in  round_trip_PCS_LAB.cpp  round_trip_PCS_LAB.vcproj
IccProfLib/: IccApplyBPC.cpp  IccApplyBPC.h  IccCmm.cpp  IccCmm.h  IccConvertUTF.h  IccDefs.h  IccEval.cpp  IccEval.h  IccIO.cpp  IccIO.h  IccMpeACS.cpp  IccMpeACS.h  IccMpeBasic.cpp  IccMpeBasic.h  IccMpeFactory.cpp  IccMpeFactory.h  IccPrmg.cpp  IccPrmg.h  IccProfLib.dsp  IccProfLib.vcproj  IccProfLibConf.h  IccProfLibVer.h  IccProfLib_CRTDLL.dsp  IccProfLib_CRTDLL.vcproj  IccProfLib_CRTDLL_v7.vcproj  IccProfLib_v7.vcproj  IccProfile.cpp  IccProfile.h  IccTag.h  IccTagBasic.cpp  IccTagBasic.h  IccTagDict.cpp  IccTagDict.h  IccTagFactory.cpp  IccTagFactory.h  IccTagLut.cpp  IccTagLut.h  IccTagMPE.cpp  IccTagMPE.h  IccTagProfSeqId.cpp  (+12 more)
LibTiff/: Contents.txt
SampleICC.xcodeproj/: joseph.perspectivev3  project.pbxproj
Tools/: Makefile.in
Tools/CmdLine/: Makefile.am  Makefile.in
Tools/CmdLine/IccApplyNamedCmm/: Makefile.am  Makefile.in  iccApplyNamedCmm.cpp  iccApplyNamedCmm.vcproj
Tools/CmdLine/IccApplyNamedCmm/DataSetFiles/: cmyk16bit.txt  cmyk8bit.txt
Tools/CmdLine/IccApplyProfiles/: Makefile.am  Makefile.in  TiffImg.cpp  TiffImg.h  iccApplyProfiles.cpp  iccApplyProfiles.vcproj  iccApplyProfiles_v7.vcproj
Tools/CmdLine/IccCreateCLUTInputProfile/: BlackScaler.cpp  BlackScaler.h  CAT.h  CLUT.cpp  CLUT.h  IccCreateCLUTInputProfile.dsp  IccCreateCLUTInputProfile.vcproj  IccFlattenAToBTag.dsp  IccFlattenAToBTag.vcproj  Makefile.am  Makefile.in  iccCreateCLUTInputProfile.cpp  iccFlattenAToBTag.cpp
Tools/CmdLine/IccCreateCLUTInputProfile/winGetOpt/: getopt.cpp  getopt.h
Tools/CmdLine/IccCreateCLUTProfile/: IccCreateCLUTInputProfile.vcproj  Makefile.am  Makefile.in  iccCreateCLUTInputProfile.cpp  iccCreateCLUTProfile.cpp  iccFlattenAToBTag.cpp
Tools/CmdLine/IccCreateCLUTProfile/winGetOpt/: getopt.h
Tools/CmdLine/IccCreateTRCMatrixDisplayProfile/: IccCreateTRCMatrixDisplayProfile.vcproj  Makefile.am  Makefile.in  iccCreateTRCMatrixDisplayProfile.cpp
Tools/CmdLine/IccDumpProfile/: Makefile.am  Makefile.in  iccDumpProfile.cpp  iccDumpProfile.vcproj
Tools/CmdLine/IccGamutMapGirdle/: Makefile.in  iccGamutMapGirdle.cpp
Tools/CmdLine/IccGetBPCInfo/: Makefile.am  Makefile.in  iccGetBPCInfo.cpp  iccGetBPCInfo.dsp  iccGetBPCInfo.vcproj  iccGetBPCInfo_v7.vcproj  iccGetBPCInfo_v8.vcproj
Tools/CmdLine/IccProfLibTest/: Makefile.am  Makefile.in  WriteFunctions.cpp  WriteFunctions.h  iccProfLibTest.cpp  iccProfLibTest.vcproj
Tools/CmdLine/IccReconstructMeasurements/: Makefile  Makefile.am  Makefile.in  MeasurementExtractor.cpp  MeasurementExtractor.h  iccReconstructMeasurements.cpp
Tools/CmdLine/IccReconstructMeasurements/deviceCodeGenerators/: Makefile  Makefile.am  Makefile.in  generateDeviceCodes.cpp
Tools/CmdLine/IccReconstructMeasurements/examples/: RSR_monitor_profile_from_ICC_display_profile.csh  roundTripThroughPcsLabEncoding.cpp
Tools/CmdLine/IccRoundTrip/: Makefile.am  ReadMe.txt  iccRoundTrip.cpp
Tools/CmdLine/IccStripUnknownTags/: Makefile.am  Makefile.in  iccStripUnknownTags.cpp  iccStripUnknownTags.vcproj
Tools/CmdLine/IccToXml/: IccProfileXml.cpp  IccProfileXml.h  IccTagXml.cpp  IccTagXml.h  IccTagXmlFactory.cpp  IccTagXmlFactory.h  IccToXml.cpp  IccToXml.sln  IccToXml.vcproj  IccToXml_v7.vcproj  stdafx.cpp
Tools/CmdLine/IccToolUtilsLib/: CAT.cpp  CAT.h  CLUT.cpp  CLUT.h  CLUTStuffer.cpp  CLUTStuffer.h  IccToolException.cpp  IccToolException.h  IccToolUtilsLib.vcproj  Makefile.am  Makefile.in
Tools/CmdLine/IccV4ToMPE/: Makefile.am  Makefile.in  iccV4ToMPE.cpp  iccV4ToMPE.vcproj
Tools/WinNT/: BuildAll.dsw  BuildAll.sln  BuildAll.vcproj
Tools/WinNT/ApplyDLL/: SampleICCcmm.def  SampleICCcmm.dsp  SampleICCcmm.vcproj  sampleICCInterface.cpp  sampleICCInterface.h
Tools/WinNT/ApplyProfiles/: ApplyProfiles.cpp  ApplyProfiles.h  ApplyProfiles.rc  ApplyProfiles.vcproj  ApplyProfilesDlg.cpp  ApplyProfilesDlg.h  ApplyStatusDlg.cpp  ApplyStatusDlg.h  StdAfx.cpp  StdAfx.h  TiffImg.cpp  TiffImg.h
Tools/WinNT/BuildLibTiff/: libtiff.vcproj
Tools/WinNT/ProfileDump/: ChildFrm.cpp  ChildFrm.h  IccTagDlg.cpp  IccTagDlg.h  (+18 more)
(+15 files in other folders)
