## Process this file with automake to produce Makefile.in

SUBDIRS = IccApplyNamedCmm \
	@SICC_ICC_APPLY_PROFILES@ \
	IccToolUtilsLib \
	IccCreateCLUTProfile \
	IccCreateTRCMatrixDisplayProfile \
	IccDumpProfile \
	IccProfLibTest \
	IccReconstructMeasurements \
	IccStripUnknownTags \
	IccV4ToMPE

DIST_SUBDIRS = IccApplyNamedCmm \
	IccApplyProfiles \
	IccToolUtilsLib \
	IccCreateCLUTProfile \
	IccCreateTRCMatrixDisplayProfile \
	IccDumpProfile \
	IccProfLibTest \
	IccReconstructMeasurements \
	IccStripUnknownTags \
	IccV4ToMPE
