## Process this file with automake to produce Makefile.in

SUBDIRS = IccApplyNamedCmm \
	@SICC_ICC_APPLY_PROFILES@ \
	IccDumpProfile \
	IccRoundTrip \
	IccProfLibTest \
	IccStripUnknownTags \
	IccV4ToMPE

DIST_SUBDIRS = IccApplyNamedCmm \
	IccApplyProfiles \
	IccDumpProfile \
	IccRoundTrip \
	IccProfLibTest \
	IccStripUnknownTags \
	IccV4ToMPE
